# docs/swagger.json
@@ -1890,25 +1890,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "type": "object",
-                            "properties": {
-                                "label_name": {
-                                    "type": "string"
-                                },
-                                "resident_id": {
-                                    "type": "string"
-                                },
-                                "timestamp": {
-                                    "type": "string"
-                                },
-                                "unit": {
-                                    "type": "string"
-                                },
-                                "value": {
-                                    "type": "number",
-                                    "format": "float64"
-                                }
-                            }
+                            "$ref": "#/definitions/models.CreateVitalSignRequest"
                         }
                     }
                 ],
@@ -1922,7 +1904,7 @@
                                     "type": "string"
                                 },
                                 "result": {
-                                    "type": "object"
+                                    "$ref": "#/definitions/entities.VitalSign"
                                 },
                                 "status": {
                                     "type": "string"
@@ -2302,6 +2284,75 @@
                             }
                         }
                     }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "entities.VitalSign": {
+            "type": "object",
+            "properties": {
+                "blood_pressure_diastolic": {
+                    "type": "integer"
+                },
+                "blood_pressure_systolic": {
+                    "type": "integer"
+                },
+                "breathing_rate": {
+                    "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "created_by_staff_id": {
+                    "type": "string"
+                },
+                "heart_rate": {
+                    "type": "integer"
+                },
+                "oxygen_saturation": {
+                    "type": "integer"
+                },
+                "resident_id": {
+                    "type": "string"
+                },
+                "temperature": {
+                    "type": "number"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "vital_sign_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CreateVitalSignRequest": {
+            "type": "object",
+            "required": [
+                "resident_id"
+            ],
+            "properties": {
+                "blood_pressure_diastolic": {
+                    "type": "integer"
+                },
+                "blood_pressure_systolic": {
+                    "type": "integer"
+                },
+                "breathing_rate": {
+                    "type": "integer"
+                },
+                "heart_rate": {
+                    "type": "integer"
+                },
+                "oxygen_saturation": {
+                    "type": "integer"
+                },
+                "resident_id": {
+                    "type": "string"
+                },
+                "temperature": {
+                    "type": "number"
                 }
             }
         }
